# ChatWithDoc

./: .env.example  .gitignore  DEPLOYMENT.md  LICENSE  README.md  docHandler.py  env.example  main.py  pdfHandler.py  pyproject.toml  requirements.txt  run.py  task_manager.py  txtHandler.py  webHandler.py
.github/workflows/: ci-cd.yml
docker/: Dockerfile  Dockerfile.dev
frontend/: index.html
frontend/css/: styles.css
frontend/js/: main.js
src/chat_with_doc/: __init__.py
src/chat_with_doc/api/: main.py  routes.py
src/chat_with_doc/core/: __init__.py  config.py
src/chat_with_doc/handlers/: __init__.py  base.py  doc.py  pdf.py  txt.py  web.py
src/chat_with_doc/services/: engine.py
tests/: test_api.py  test_engine.py
