[project]
name = "rag-pipeline"
version = "1.0.0"
description = "Distributed asynchronous RAG pipeline"
requires-python = ">=3.9.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "faiss-cpu>=1.9.0",
    "pydantic>=2.10.0",
    "beautifulsoup4>=4.12.0",
    "langfuse>=3.7.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["chatWithDocEnv*", "frontend*", "uploaded_files*"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "locust>=2.24.0",
]
