[project]
name = "chatwith-doc"
version = "1.0.0"
description = "Chat with your documents using Retrieval Augmented Generation (RAG)"
requires-python = ">=3.9"
authors = [
    {name = "ChatWithDoc Team"}
]
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.6",
    "pypdf>=4.0.0",    
    "python-docx>=0.8.11", 
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.1.0",
    "langchain-huggingface>=0.0.1",
    "langchain>=0.3.0",
    "langgraph>=0.1.0",
    "faiss-cpu>=1.9.0",
    "pydantic>=2.10.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["chat_with_doc"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[project.urls]
Homepage = "https://github.com/yourusername/chat-with-doc"
Documentation = "https://github.com/yourusername/chat-with-doc/wiki"
Repository = "https://github.com/yourusername/chat-with-doc.git"
Issues = "https://github.com/yourusername/chat-with-doc/issues"
